Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19404

Comctl32 / Listview's Header: last header section shows garbage when resizing

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • RosDlls
    • None

    Description

      reactos-bootcd-0.4.15-dev-7322-g3558b7b-x86-gcc-lin-dbg

      While playing with CORE-18631 and CORE-16657

      • Move last visible header so that it's only partially displayed
      • stretch it to the left and keep mouse button down

      • garbage is displayed

      • mouse button up, repaint gets OK (InvalidateRect called in HEADER_LButtonUp)

      Code of interest : https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/comctl32/header.c

      Attachments

        Issue Links

          Activity

            People

              anonanon cbialorucki
              KRosUser KRosUser
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: