[COMCTL32] Fix header redraw glitches when resizing Jira issue: CORE-19404 - Invalidate header item rect before scrolling to prevent the divider from being redrawn over and over. - Invalidate header item text through adding flag SW_INVALIDATE to ScrollWindowEx call to prevent the text from being redrawn over and over.